[project]
name = "nonebot_plugin_dorodoro"
version = "1.4.8"
description = "一个基于文字冒险的NoneBot插件"
authors = [{ name = "ATTomatoo", email = "attomato@qqs.com" }]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "nonebot2>=2.3.3",
  "nonebot-adapter-onebot>=2.3.3"
]

[project.urls]
Homepage = "https://github.com/ATTomatoo/dorodoro"
Repository = "https://github.com/ATTomatoo/dorodoro"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
